# box-agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.harness.stale-20260703/: flow-state.json
docs/: agent-env-design.md  auth-api-keys.md  bus-migration-map.md  bus-protocol.md  claude-setup.md  codebase-guide.md  codex-setup.md  current-architecture.md  decisions.md  guide-remove-legacy-fields.md  isotopes-comparison.md  message-bus-unification-提案.md  naming-audit.md  naming-rename-proposal.md  raw-bot.md  remove-static-specialists-design.md  template-system-open-questions.md  vision.md  web-frontend.md  workgroup-design.md  workgroup-discord-dependency.md  workgroup-role-design-analysis.md  yait-requirements.md
docs/archive/: README.md  decisions-2026-03-to-05.md  raw-bot.md  workgroup-design.md
ios/BoxAgent/: Config.xcconfig  Local.xcconfig.example
manual_e2e/: README.md  __init__.py  harness.py  run.py  scenarios.py
openwiki/: .last-update.json  agent-backends.md  architecture.md  bus-and-events.md  cluster.md  development.md  extending.md  quickstart.md  transports.md
scripts/: boxrun  install-restart-service.sh  naming_ambiguity_check.py  naming_audit.py  show-logs-follow.sh  show-logs.sh  uv-install-local.sh
src/boxagent/: __init__.py  _version.py  agent_env.py  config.py  context.py  copilot_api.py  doctor.py  gateway.py  heartbeat.py  main.py  mcp_admin.py  mcp_http.py  mcp_peer.py  mcp_server.py  mcp_telegram.py  paths.py  review_loop.py  router.py  (+13 more)
tests/: conftest.py
tools/: acp_mock_chat.py  judge_harness_results.py
(+372 files in other folders)
