[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boxagent"
version = "0.1.0"
description = "BoxAgent (BA): self-hosted AI agent gateway for Telegram backends"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "agent", "telegram", "gateway", "claude", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]
dependencies = [
    "aiogram>=3.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "croniter>=2.0",
    "agent-client-protocol>=0.8",
]

[project.scripts]
boxagent = "boxagent.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services (Claude CLI, Telegram)",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
]
